package br.edu.acad.ifma.notification.usecase;

import br.edu.acad.ifma.notification.domain.SendNotificationFailedEvent;
import br.edu.acad.ifma.notification.domain.FcmToken;
import br.edu.acad.ifma.notification.domain.NotificationBody;
import br.edu.acad.ifma.notification.domain.NotificationStatus;
import br.edu.acad.ifma.notification.domain.NotificationTitle;
import br.edu.acad.ifma.notification.domain.PushNotification;
import br.edu.acad.ifma.notification.domain.PushSendingException;
import br.edu.acad.ifma.notification.port.NotificationEventPublisherPort;
import br.edu.acad.ifma.notification.port.NotificationRepositoryPort;
import br.edu.acad.ifma.notification.port.PushSenderPort;
import java.time.Instant;
import java.util.HashMap;
import java.util.Map;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

@Service
@Transactional
public class SendPushNotificationUseCase {

    private static final Logger log = LoggerFactory.getLogger(SendPushNotificationUseCase.class);

    private final NotificationRepositoryPort repository;
    private final PushSenderPort pushSender;
    private final NotificationEventPublisherPort eventPublisher;

    public SendPushNotificationUseCase(
            NotificationRepositoryPort repository,
            PushSenderPort pushSender,
            NotificationEventPublisherPort eventPublisher) {
        this.repository = repository;
        this.pushSender = pushSender;
        this.eventPublisher = eventPublisher;
    }

    public PushNotification execute(SendPushNotificationCommand command) {
        return execute(command, 1);
    }

    public PushNotification execute(SendPushNotificationCommand command, int attemptNumber) {
        FcmToken token = new FcmToken(command.recipientToken());
        NotificationTitle title = new NotificationTitle(command.title());
        NotificationBody body = new NotificationBody(command.body());

        PushNotification notification = PushNotification.builder()
                .withRecipientToken(token)
                .withTitle(title)
                .withBody(body)
                .withStatus(NotificationStatus.PENDING)
                .withCreatedAt(Instant.now())
                .build();

        PushNotification saved = repository.save(notification);

        try {
            Map<String, String> fcmData = new HashMap<>();
            if (command.data() != null) fcmData.putAll(command.data());
            fcmData.put("notificationId", String.valueOf(saved.getId()));
            String messageId = pushSender.sendPushNotification(token, title, body, fcmData);

            saved.markSent(messageId);
            log.info("Notification {} sent with FCM id {}", saved.getId(), messageId);
        } catch (PushSendingException e) {
            saved.markFailed(e.getMessage());
            log.error("Notification {} failed on attempt {}: {}", saved.getId(), attemptNumber, e.getMessage());
            eventPublisher.publishSendNotificationFailed(new SendNotificationFailedEvent(
                    saved.getId(),
                    command.recipientToken(),
                    command.title(),
                    command.body(),
                    command.data(),
                    e.getMessage(),
                    attemptNumber
            ));
        }

        return repository.save(saved);
    }
}
